Move .in-period total breakeven label down to avoid overlapping with 'breakeven as of yesterday' label in cashboard global billable widget.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -403,6 +403,9 @@ table .alert {
   right: -1px;
   color: #999;
 }
+.in-period .cashboard-billable-total:after {
+  bottom: -31px;
+}
 .profit .cashboard-billable-total,
 .loss .cashboard-billable-total {
   background: #aaa;
